Prepare Pantry Planner for free deployment